# Leidenschaft

./: Leidenschaft.py  leveling.db  main.py  pyproject.toml
dislevel/: card.py  connector.py  leveling_service.py  minicard.py  utils.py
dislevel/nextcord/: __init__.py  slash.py
easy_pil/: editor.py  font.py  text.py
scripts/: sync_level_roles.py
tests/: conftest.py  test_cards_smoke.py  test_dislevel_utils.py  test_easy_pil_smoke.py  test_leveling_service.py  test_prayer_utils.py
